--- a/icehockey_ServerV3/WebContent/WEB-INF/web.xml
+++ b/icehockey_ServerV3/WebContent/WEB-INF/web.xml
@@ -5,8 +5,11 @@
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
     <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
+    <welcome-file>logining.html</welcome-file>
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+    <session-config>
+    <session-timeout>15</session-timeout>
+  </session-config>
 </web-app>
