--- a/icehockey_ServerV3/WebContent/WEB-INF/web.xml
+++ b/icehockey_ServerV3/WebContent/WEB-INF/web.xml
@@ -9,7 +9,7 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
-    <session-config>
+   <!--  <session-config>
     <session-timeout>15</session-timeout>
-  </session-config>
+  </session-config> -->
 </web-app>
